--- a/README.rdoc
+++ b/README.rdoc
@@ -14,6 +14,8 @@ This gem is tested on Ruby versions 1.8.7, 1.9.2 and 1.9.3.
 
 First Initialize an instance Linkedin class like this:
 
+  require 'linkedin_scraper'
+
   linkedin = LinkedinScraper::linkedin.new
 
 This sets the mechanize object for scraping. Now you can feed name and companies:
